--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.14.18",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.4",
+    "chart.js": "^4.4.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "whois": "^2.14.0",
     "whois-json": "^2.0.4"
